--- a/Proyecto1/style.css
+++ b/Proyecto1/style.css
@@ -3,12 +3,16 @@
     margin: 0;
     font-family: fantasy, Arial, Helvetica, sans-serif, sans-serif;
 }
+
+
 /* PARA LA BARRA DE NAVEGACION*/
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: rgb(90, 157, 227);
+    position: center;
+    background-color: rgb(0,0,0,0.199);
     overflow: hidden;
   }
+  
   
   /* Style the links inside the navigation bar */
   .topnav a {
@@ -16,22 +20,25 @@
     display: block;
     list-style-type: center;
     text-align: center;
-    color: #080808;
+    color: #f1f1f1;
     padding: 14px 16px;
     font-size: 17px;
   
   }
+   
+ 
   
   /* PARA EL COLOR QUE CAMBIA EN CADA PARTE DE LA BARRA */
   .topnav a:hover {
     background: #0468aa ;
-    color: rgb(3, 2, 2);
+    color: rgb(255, 255, 255);
+    position:center ;
   }
   
 
   .topnav a.active {
-    background-color: #0468aa;
-    color: rgb(7, 6, 6);
+    position: center;
+    color: rgb(255, 255, 255);
   }
   
 
@@ -138,17 +145,7 @@ button {
     width: 50%;
 }
 
-/* para mostrar todas las canciones*/ 
-.ShowSongs{
-    position: absolute;
-     top: 520%;
-     left: 50%;
-     transform: translate(-50%,-50%);
-     width: 500px;
-     background-color: rgb(108, 154, 219);
-     border-radius: 15px;
-     width: 50%;
-   }
+
 
 /*PARA CARGA DE PODCASTS */
 .CargarPod{
@@ -199,7 +196,17 @@ button {
     width: 50%;
 }
 
-
+/* para mostrar todas las canciones*/ 
+.ShowSongs{
+    position: absolute;
+     top: 1130%;
+     left: 50%;
+     transform: translate(-50%,-50%);
+     width: 500px;
+     background-color: rgb(108, 154, 219);
+     border-radius: 15px;
+     width: 50%;
+   }
 
 /*PARA AMIGOS */
 .listaAmigos{
@@ -232,4 +239,62 @@ button[type ="buttonsAmigos"]{
      
  }
 
- 
+ /******************/
+
+ /* The side navigation menu */
+.sidebar {
+
+    margin: 0;
+    padding: 0;
+    width: 129px;
+    background-color: rgb(0,0,0,0.199);
+    position: fixed;
+    height: 150%;
+    overflow: auto;
+  }
+  
+  /* Sidebar links */
+  .sidebar a {
+    display: block;
+    color:rgb(221, 221, 221);
+    padding: 16px;
+    text-decoration: none;
+  }
+  
+  /* Active/current link */
+  .sidebar a.active {
+   
+    color: rgb(238, 238, 238);
+  }
+  
+  /* Links on mouse-over */
+  .sidebar a:hover:not(.active) {
+    background-color:#0468aa;
+    color: rgb(255, 249, 249);
+  }
+  
+  /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
+  div.content {
+    margin-left: 200px;
+    padding: 1px 16px;
+    height: 1000px;
+  }
+  
+  /* On screens that are less than 700px wide, make the sidebar into a topbar */
+  @media screen and (max-width: 700px) {
+    .sidebar {
+      width: 100%;
+      height: auto;
+      position: relative;
+    }
+    .sidebar a {float: left;}
+    div.content {margin-left: 0;}
+  }
+  
+  /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
+  @media screen and (max-width: 400px) {
+    .sidebar a {
+      text-align: center;
+      float: none;
+    }
+  }
