--- a/Proyecto1/style.css
+++ b/Proyecto1/style.css
@@ -94,7 +94,8 @@ button[type ="buttonRegistrar"]{
 button {
     position: 200%;
     text-decoration:none;
-    font-weight:600;
+    font-weight: 100;
+   
     font-size:20px;
     color:#010000;
     padding-top:15px;
@@ -136,7 +137,7 @@ button {
 /*PARA CARGA DE CANCIONES */
 .CargarSongs{
     position: absolute;
-    top: 445%;
+    top: 475%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 500px;
@@ -150,7 +151,7 @@ button {
 /*PARA CARGA DE PODCASTS */
 .CargarPod{
     position: absolute;
-    top: 630%;
+    top: 615%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 500px;
@@ -161,7 +162,7 @@ button {
 /*PARA CARGA DE MUSICA PROGRAMADA */
 .MusicaProgramada{
     position: absolute;
-    top: 710%;
+    top: 725%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 500px;
@@ -174,7 +175,7 @@ button {
 /* para los podcast */
 .Podcast{
     position: absolute;
-    top: 810%;
+    top: 850%;
     left: 50%;
     transform: translate(-50%,-50%);
     width: 500px;
@@ -222,22 +223,43 @@ button {
 
 
 button[type ="buttonsAmigos"]{
-    float: center;
+    
      right: 35%;
      text-decoration:none;
-     font-weight: 100;
+     font-weight: 90;
      font-size: 20px;
-     color:#fafafa;
-     padding-top:20px;
-     padding-bottom:25px;
-     padding-left:40px;
-     padding-right:40px;
+     color:#070404;
+     padding-top:15px;
+     padding-bottom:15px;
+     padding-left:20px;
+     padding-right:20px;
      background-color:#005BBB;
      border-width: 3px;
      border-style: solid;
-     border-color: #ffffff;
+     border-color: #0e0909;
      
  }
+h5{
+  text-align: center;
+  padding: 10 0 20px 0;
+}
+ button[type ="Amigos"]{
+  float: right;
+  right: 35%;
+  text-decoration:none;
+  font-weight: 100;
+  font-size: 20px;
+  color:#020101;
+  padding-top:15px;
+  padding-bottom:20px;
+  padding-left:40px;
+  padding-right:40px;
+  background-color:#005BBB;
+  border-width: 3px;
+  border-style: solid;
+  border-color: #000000;
+  
+}
 
  /******************/
 
@@ -256,7 +278,7 @@ button[type ="buttonsAmigos"]{
   /* Sidebar links */
   .sidebar a {
     display: block;
-    color:rgb(221, 221, 221);
+    color:rgb(0, 0, 0);
     padding: 16px;
     text-decoration: none;
   }
@@ -264,13 +286,13 @@ button[type ="buttonsAmigos"]{
   /* Active/current link */
   .sidebar a.active {
    
-    color: rgb(238, 238, 238);
+    color: rgb(0, 0, 0);
   }
   
   /* Links on mouse-over */
   .sidebar a:hover:not(.active) {
     background-color:#0468aa;
-    color: rgb(255, 249, 249);
+    color: rgb(0, 0, 0);
   }
   
   /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
